# dealii-galerkin-difference-methods

./: CMakeLists.txt  README.MD
applications/: CMakeLists.txt
applications/advection/: CMakeLists.txt  advection-app.cc  advection-convergence.cc  advection-ev.cc
applications/advection/include/gdm/advection/: discretization.h  mass.h  parameters.h  problem.h  stiffness.h
applications/advection/scripts/: README.MD  ev.sh  spectrum.sh
applications/advection/tests/: CMakeLists.txt  composite_domain_01.json  composite_domain_01.mpirun=12.output  pipe_01.json  pipe_01.mpirun=12.output  test_01.output
applications/advection/tests-convergence/: CMakeLists.txt  non-parallel-advection-direction.json  non-parallel-advection-direction.mpirun=12.output  parallel-convergence-no-cut.json  parallel-convergence-no-cut.mpirun=12.output  parallel-convergence.json  parallel-convergence.mpirun=12.output  parallel-ramp-degree.json  parallel-ramp-degree.mpirun=12.output
applications/wave/: CMakeLists.txt  README.MD  wave-app.cc  wave-ev.cc
applications/wave/include/gdm/wave/: discretization.h  mass.h  parameters.h  problem.h  stiffness.h  wave-discretization.h  wave-mass.h  wave-stiffness.h
applications/wave/tests/: CMakeLists.txt  heat_0.json  heat_0.output  heat_1.json  heat_1.output  heat_composite_0.json  heat_composite_0.output  step85_0.json  step85_0.output  wave_0.json  wave_0.output  wave_1.json  wave_1.output  wave_composite_0.json  wave_composite_0.output
prototypes/: CMakeLists.txt  advection_01_fem.cc  advection_01_gdm.cc  advection_02_fem.cc  cut_advection_01_fem.cc  cut_advection_01_gdm.output  cut_advection_02_fem.cc  cut_heat_01_fem.cc  cut_heat_01_gdm.cc  cut_heat_02_gdm.cc  cut_poisson_01_fem.cc  cut_poisson_01_gdm.cc  cut_poisson_01_gdm.output  cut_wave_01_gdm.cc
scripts/: create_coefficients.py  rk_stability.py
tests/: CMakeLists.txt  advection_01.cc  advection_01.output  advection_01_fem.output  advection_01_gdm.cc  advection_02_fem.cc  advection_02_fem.output  advection_02_gdm.cc  advection_02_gdm.output  (+57 more)
(+5 files in other folders)
